# smt-optim

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  docs.yml  release.yml  tests.yml
docs/: requirements.txt
docs/source/: architecture.md  benchmark_registry.ipynb  concepts.md  conf.py  examples.md  examples.rst  get-started.md  getting-started.rst  index.md  index.rst  miscellaneous.md  performance.md
docs/source/api/: acquisition_functions.rst  acquisition_strategies.rst  benchmarks.rst  core.rst  index.rst  smt_optim.acquisition_strategies.rst  smt_optim.benchmarks.rst  smt_optim.core.rst  smt_optim.rst  smt_optim.subsolvers.rst  smt_optim.surrogate_models.rst  smt_optim.utils.rst  (+3 more)
examples/: api.ipynb  benchmarkproblems.ipynb  bisego.ipynb  ego.ipynb  imse_example.ipynb  logging.ipynb  mfsego.ipynb  minimize.ipynb  mixed_variable.ipynb  mixed_variables.ipynb  multi_obj.ipynb  sego.ipynb  vfpi.ipynb  vfpi_old.ipynb
paper/: paper.bib  paper.md
scratch/: update_notebook_post.py
src/MultiFiCBO.egg-info/: PKG-INFO  SOURCES.txt
src/boma/: acquisition_functions.py  acquisition_strategies.py  frameworks.py  optimizer.py  surrogate_models.py
src/multificbo/: acquisition_functions.py  acquisition_strategies.py  methods.py  optimizer.py  surrogate_models.py
src/smt_optim/: __init__.py  _acquisition_strategies.py  frameworks.py
src/smtoptim/: _acquisition_strategies.py  acquisition_functions.py  acquisition_strategies.py  frameworks.py  optimizer.py
tests/: test_multi_obj_integration.py
(+150 files in other folders)
