[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "smt-optim"
version = "0.0.1"
authors = [
  { name="Oihan Cordelier", email="oihan.cordelier@polymtl.ca" },
]
description = "A multi-fidelity constrained Bayesian optimization toolkit"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "scipy",
    "smt",
]

license = "LicenseRef-My-Custom-License"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "smt>=2.10",
]

[project.urls]
Homepage = "https://github.com/oihanc/boma"
Issues = "https://github.com/oihanc/boma/issues"