[metadata]
name = MultiFiCBO
version = 0.1.0
author = Oihan Cordelier
description = A multi-fidelity constrained Bayesian optimization toolkit
license = MIT
url = https://github.com/oihanc/MultiFiCBO
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: Unknown :: Unknown
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    numpy
    scipy

[options.packages.find]
where = src